--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,28 @@
     <title>Photo board</title>
 </head>
 <body>
-    <script src="js/image-service.js"></script>
-    <script src="js/board.js"></script>
-    <script src="js/card.js"></script>
-    <script src="js/app.js"></script>
+<nav id="topbar">
+    <button class="btn btn-login">Login with Google</button>
+    <img src="" class="avatar">
+    <span class="username">User Name</span>
+    <button class="btn btn-logout">Logout</button>
+</nav>
+<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "",
+        authDomain: "",
+        databaseURL: "",
+        storageBucket: "",
+        messagingSenderId: ""
+    };
+    firebase.initializeApp(config);
+</script>
+<script src="js/topbar.js"></script>
+<script src="js/image-service.js"></script>
+<script src="js/board.js"></script>
+<script src="js/card.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
